--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 		<div id="all">
 			<div id="head">
 				<div id="nav" class="notprint">
-					<h3><a href="http://www.piratenpartei.de">Piratenpartei Deutschland</a> &bull; <a href="http://www.piraten-lsa.de">Piratenpartei Sachsen-Anhalt</a></h3>
+					<p>
+						<a href="http://www.piratenpartei.de">Piratenpartei Deutschland</a> &bull;
+						<a href="http://www.piraten-lsa.de">Piratenpartei Sachsen-Anhalt</a>
+					</p>
 				</div>
 			</div>
 
