--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						erz&auml;hlen?
 					</p>
 					<p class="notprint" style="font-weight: bold">
-						Dann drucke dir doch einfach die folgende Bingo-Tabelle aus (am besten im Queerformat):
+						Dann drucke dir doch einfach die folgende Bingo-Tabelle aus (am besten im Querformat):
 					</p>
 					
 					<p style="height: 10px"></p>
