added ribbon in left top corner

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	</head>
 
 	<body>
+		<a href="http://github.com/christophlsa/bullshitbingo">
+			<img style="position: absolute; top: 0; right: 0; border: 0;" src="images/forkmeifyoucan.png" alt="fork me if you can" />
+		</a>
+
 		<div id="all">
 			<div id="head">
 				<div id="nav" class="notprint">
